--- a/JUSTICA_HTML/contact.html
+++ b/JUSTICA_HTML/contact.html
@@ -30,16 +30,21 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="de-flex sm-pt10">
-                        <div class="de-flex-col">
+                        <div>
                             <!-- logo begin -->
                             <div class="logo-container">
-                                <h1 class="botello-logo">Botello</h1>
-                                <p class="corporativo-logo">Corporativo Jurídico</p>
+
+                                <img style="width: 200px; margin-top:9px" src="images/logo.jpeg" />
+
                             </div>
+                            <!-- <div class="logo-container">
+                                    <h1 class="botello-logo">Botello</h1>
+                                    <p class="corporativo-logo">Corporativo Jurídico S.C.</p>
+                                </div> -->
                             <div id="logo">
                                 <a href="index.html">
-                                    <img alt="" class="logo" src="images/llogo-light.png" />
-                                    <img alt="" class="logo-2" src="images/llogo.png" />
+                                    <img alt="" class="logo" src="images/ldogo-light.png" />
+                                    <img alt="" class="logo-2" src="images/logo.jpeg" />
                                 </a>
                             </div>
                             <!-- logo close -->
@@ -48,19 +53,18 @@
                             <!-- mainmenu begin -->
                             <ul id="mainmenu">
                                 <li><a href="index.html">Home</a>
-
                                 </li>
-                                <li><a href="about.html">Nosotros</a></li>
-                                <li><a href="practice-areas.html">Áreas de Especialización</a></li>
-                                <li><a href="clients.html">Clientes</a></li>
-                                <li><a href="contact.html">Contacto</a></li>
+                                <li><a id="nav" href="about.html">Nuestro Equipo</a></li>
+                                <li><a id="nav" href="practice-areas.html">Servicios Legales</a></li>
+                                <li><a id="nav" href="clients.html">Clientes</a></li>
+                                <li><a id="nav" href="contact.html">Contacto</a></li>
                                 </a></li>
                                 <!-- mainmenu close -->
                         </div>
                         <div class="de-flex-col">
                             <div class="h-phone md-hide"><span>¿Necesitas ayuda?</span class="white-color"><i
                                     class="white-color fa fa-phone fa-lg"></i>
-                                722-297-05-12</div>
+                                722-297-05-10</div>
                             <span class="white-color" id="menu-btn"></span>
                         </div>
                     </div>
