--- a/JUSTICA_HTML/clients.html
+++ b/JUSTICA_HTML/clients.html
@@ -29,17 +29,21 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="de-flex sm-pt10">
-                            <div class="de-flex-col">
+                            <div>
                                 <!-- logo begin -->
                                 <div class="logo-container">
-                               
-                                    <img style="width: 200px; margin-top:0px" src="images/logo.jpeg" />
-    
+
+                                    <img style="width: 200px; margin-top:9px" src="images/logo.jpeg" />
+
                                 </div>
+                                <!-- <div class="logo-container">
+                                    <h1 class="botello-logo">Botello</h1>
+                                    <p class="corporativo-logo">Corporativo Jurídico S.C.</p>
+                                </div> -->
                                 <div id="logo">
                                     <a href="index.html">
-                                        <img alt="" class="logo" src="images/llogo-light.png" />
-                                        <img alt="" class="logo-2" src="images/llogo.png" />
+                                        <img alt="" class="logo" src="images/ldogo-light.png" />
+                                        <img alt="" class="logo-2" src="images/logo.jpeg" />
                                     </a>
                                 </div>
                                 <!-- logo close -->
@@ -48,12 +52,11 @@
                                 <!-- mainmenu begin -->
                                 <ul id="mainmenu">
                                     <li><a href="index.html">Home</a>
-
                                     </li>
-                                    <li><a href="about.html">Nuestro Equipo</a></li>
-                                    <li><a href="practice-areas.html">Servicios Legales</a></li>
-                                    <li><a href="clients.html">Clientes</a></li>
-                                    <li><a href="contact.html">Contacto</a></li>
+                                    <li><a id="nav" href="about.html">Nuestro Equipo</a></li>
+                                    <li><a id="nav" href="practice-areas.html">Servicios Legales</a></li>
+                                    <li><a id="nav" href="clients.html">Clientes</a></li>
+                                    <li><a id="nav" href="contact.html">Contacto</a></li>
                                     </a></li>
                                     <!-- mainmenu close -->
                             </div>
@@ -246,7 +249,7 @@
                                 </div>
                             </div>
                         </div>
-                      <!--  <div class="col-lg-4 col-md-6 col-sm-6 mb30 wow fadeInRight" data-wow-delay=".6s">
+                        <!--  <div class="col-lg-4 col-md-6 col-sm-6 mb30 wow fadeInRight" data-wow-delay=".6s">
                             <div class="f-profile text-center">
                                 <div class="fp-wrap f-invert">
                                     <div class="fpw-overlay-btm"></div>
