--- a/JUSTICA_HTML/about.html
+++ b/JUSTICA_HTML/about.html
@@ -476,7 +476,7 @@
         </div>
     </div>
     </section>
-    <section id="section-text" data-bgcolor="#111111" class="text-light">
+    <section id="section-text" data-bgcolor="#111111" class="we-allies-section text-light">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-4 col-md-12 wow fadeInRight" data-wow-delay=".2s">
@@ -498,7 +498,7 @@
     <!-- content close -->
     <a href="#" id="back-to-top"></a>
     <!-- footer begin -->
-    <footer>
+    <footer class="we-allies-footer">
         <div class="container">
             <div class="row">
                 <div class="col-lg-7">
