--- a/JUSTICA_HTML/index.html
+++ b/JUSTICA_HTML/index.html
@@ -410,7 +410,7 @@
                     </div>
                 </div>
             </div>
-            <div class="image-container col-md-6 pull-right"
+            <div class="image-container col-md-6 pull-right guide-image"
                 data-bgimage="url(images/background/subheader3.jpeg) center"></div>
         </section>
         <section aria-label="section" data-bgimage="url(images/background/3-bw.jpg) top"
